fix: in progress details now aligned

--- a/src/app/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/infraOnline/index.module.scss
+++ b/src/app/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/infraOnline/index.module.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.reTriggerGrid {
+  width: 100%;
+}
+
 .deployDetails {
   display: flex;
   flex-direction: column;
